# plotune-simple-reader-ext

./: Cargo.toml  LICENSE  README.md  __main__.py  build.linux.sh  build.win.bat  compile.bat  plugin.json  requirements.txt  routes.py
core/: __init__.py  pltx_convertion.py  reader.py  routes.py
data/: index.html  recording.pltx
examples/: read_pltx.rs
scripts/: build.linux.sh  build.win.ps1  patch_plugin.py
src/: lib.rs  main.py  main.rs  plugin.json
src/client/: register.rs
src/core/: agent.py  compression.rs  constants.rs  data_handle.rs  error.rs  format.rs  mod.rs  reader.rs
src/core/io/: __init__.py  pltx_convertion.py  reader.py
src/models/: extension_model.rs  mod.rs
src/routes/: data_routes.rs  info_routes.rs  mod.rs  ws_handler.rs
src/state/: app_state.rs
src/utils/: __init__.py  conf_helper.rs  mod.rs
